@@ -16,6 +16,8 @@
 
 package com.android.bluetooth.hfp;
 
+import static com.google.common.truth.Truth.assertThat;
+
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyBoolean;
 import static org.mockito.Mockito.anyInt;
@@ -54,8 +56,8 @@ import com.android.bluetooth.btservice.AdapterService;
 import com.android.bluetooth.btservice.RemoteDevices;
 import com.android.bluetooth.btservice.SilenceDeviceManager;
 import com.android.bluetooth.btservice.storage.DatabaseManager;
+import com.android.bluetooth.flags.Flags;
 
-import org.hamcrest.Matchers;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -68,8 +70,8 @@ import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Set;
 
 /** Tests for {@link HeadsetService} */
@@ -152,7 +154,7 @@ public class HeadsetServiceTest {
         // Mock methods in HeadsetObjectsFactory
         doAnswer(
                         invocation -> {
-                            Assert.assertNotNull(mCurrentDevice);
+                            assertThat(mCurrentDevice).isNotNull();
                             final HeadsetStateMachine stateMachine =
                                     mock(HeadsetStateMachine.class);
                             doReturn(BluetoothProfile.STATE_DISCONNECTED)
@@ -180,7 +182,7 @@ public class HeadsetServiceTest {
         mHeadsetService.stop();
         HeadsetNativeInterface.setInstance(null);
         mHeadsetService = HeadsetService.getHeadsetService();
-        Assert.assertNull(mHeadsetService);
+        assertThat(mHeadsetService).isNull();
         mStateMachines.clear();
         mCurrentDevice = null;
         HeadsetObjectsFactory.setInstanceForTesting(null);
@@ -189,15 +191,13 @@ public class HeadsetServiceTest {
     /** Test to verify that HeadsetService can be successfully started */
     @Test
     public void testGetHeadsetService() {
-        Assert.assertEquals(mHeadsetService, HeadsetService.getHeadsetService());
+        assertThat(HeadsetService.getHeadsetService()).isEqualTo(mHeadsetService);
         // Verify default connection and audio states
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                BluetoothHeadset.STATE_AUDIO_DISCONNECTED,
-                mHeadsetService.getAudioState(mCurrentDevice));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getAudioState(mCurrentDevice))
+                .isEqualTo(BluetoothHeadset.STATE_AUDIO_DISCONNECTED);
     }
 
     /** Test okToAcceptConnection method using various test cases */
@@ -210,7 +210,7 @@ public class HeadsetServiceTest {
                 mCurrentDevice,
                 BluetoothDevice.BOND_NONE,
                 BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
-                false);
+                Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_NONE,
@@ -220,14 +220,14 @@ public class HeadsetServiceTest {
                 mCurrentDevice,
                 BluetoothDevice.BOND_NONE,
                 BluetoothProfile.CONNECTION_POLICY_ALLOWED,
-                false);
+                Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice, BluetoothDevice.BOND_NONE, badPriorityValue, false);
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_BONDING,
                 BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
-                false);
+                Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_BONDING,
@@ -237,7 +237,7 @@ public class HeadsetServiceTest {
                 mCurrentDevice,
                 BluetoothDevice.BOND_BONDING,
                 BluetoothProfile.CONNECTION_POLICY_ALLOWED,
-                false);
+                Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice, BluetoothDevice.BOND_BONDING, badPriorityValue, false);
         testOkToAcceptConnectionCase(
@@ -258,11 +258,17 @@ public class HeadsetServiceTest {
         testOkToAcceptConnectionCase(
                 mCurrentDevice, BluetoothDevice.BOND_BONDED, badPriorityValue, false);
         testOkToAcceptConnectionCase(
-                mCurrentDevice, badBondState, BluetoothProfile.CONNECTION_POLICY_UNKNOWN, false);
+                mCurrentDevice,
+                badBondState,
+                BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
+                Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice, badBondState, BluetoothProfile.CONNECTION_POLICY_FORBIDDEN, false);
         testOkToAcceptConnectionCase(
-                mCurrentDevice, badBondState, BluetoothProfile.CONNECTION_POLICY_ALLOWED, false);
+                mCurrentDevice,
+                badBondState,
+                BluetoothProfile.CONNECTION_POLICY_ALLOWED,
+                Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(mCurrentDevice, badBondState, badPriorityValue, false);
     }
 
@@ -277,7 +283,7 @@ public class HeadsetServiceTest {
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -291,18 +297,15 @@ public class HeadsetServiceTest {
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTING);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTING,
-                mHeadsetService.getConnectionState(mCurrentDevice));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTING);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         // 2nd connection attempt will fail
-        Assert.assertFalse(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isFalse();
         // Verify makeStateMachine is only called once
         verify(mObjectsFactory).makeStateMachine(any(), any(), any(), any(), any(), any());
         // Verify CONNECT is only sent once
@@ -337,11 +340,9 @@ public class HeadsetServiceTest {
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         // Test disconnect from native
         HeadsetStackEvent disconnectEvent =
                 new HeadsetStackEvent(
@@ -353,10 +354,9 @@ public class HeadsetServiceTest {
                 .sendMessage(HeadsetStateMachine.STACK_EVENT, disconnectEvent);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_DISCONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(Collections.EMPTY_LIST, mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEmpty();
     }
 
     /**
@@ -417,7 +417,7 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -441,24 +441,21 @@ public class HeadsetServiceTest {
             // Put device to connecting
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
                     .thenReturn(BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
                     .thenReturn(BluetoothProfile.STATE_CONNECTED);
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
         }
         // Connect the next device will fail
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, MAX_HEADSET_CONNECTIONS);
-        Assert.assertFalse(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isFalse();
         // Though connection failed, a new state machine is still lazily created for the device
         verify(mObjectsFactory, times(MAX_HEADSET_CONNECTIONS + 1))
                 .makeStateMachine(
@@ -468,12 +465,10 @@ public class HeadsetServiceTest {
                         eq(mAdapterService),
                         eq(mNativeInterface),
                         eq(mSystemInterface));
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertThat(
-                mHeadsetService.getConnectedDevices(),
-                Matchers.containsInAnyOrder(connectedDevices.toArray()));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices())
+                .containsExactlyElementsIn(connectedDevices);
     }
 
     /**
@@ -487,7 +482,7 @@ public class HeadsetServiceTest {
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -503,40 +498,37 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         mHeadsetService.onConnectionStateChangedFromStateMachine(
                 mCurrentDevice,
                 BluetoothProfile.STATE_DISCONNECTED,
                 BluetoothProfile.STATE_CONNECTED);
         // Test connect audio - set the device first as the active device
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(
-                BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.SUCCESS);
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getAudioState())
                 .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTING);
         // 2nd connection attempt for the same device will succeed as well
-        Assert.assertEquals(
-                BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.SUCCESS);
         // Verify CONNECT_AUDIO is only sent once
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(eq(HeadsetStateMachine.CONNECT_AUDIO), any());
         // Test disconnect audio
-        Assert.assertEquals(
-                BluetoothStatusCodes.SUCCESS, mHeadsetService.disconnectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.SUCCESS);
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.DISCONNECT_AUDIO, mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getAudioState())
                 .thenReturn(BluetoothHeadset.STATE_AUDIO_DISCONNECTED);
         // Further disconnection requests will fail
-        Assert.assertEquals(
-                BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED,
-                mHeadsetService.disconnectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED);
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(eq(HeadsetStateMachine.DISCONNECT_AUDIO), any(BluetoothDevice.class));
     }
@@ -553,7 +545,7 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -581,9 +573,8 @@ public class HeadsetServiceTest {
                     mCurrentDevice,
                     BluetoothProfile.STATE_DISCONNECTED,
                     BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
@@ -591,33 +582,30 @@ public class HeadsetServiceTest {
                     .thenReturn(BluetoothProfile.STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(BluetoothProfile.STATE_CONNECTED);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
                     mCurrentDevice,
                     BluetoothProfile.STATE_CONNECTING,
                     BluetoothProfile.STATE_CONNECTED);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Try to connect audio
             // Should fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                    mHeadsetService.connectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
             // Should succeed after setActiveDevice()
-            Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+            assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, mCurrentDevice);
             // Put device to audio connecting state
             when(mStateMachines.get(mCurrentDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTING);
             // 2nd connection attempt will also succeed
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             // Verify CONNECT_AUDIO is only sent once
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(eq(HeadsetStateMachine.CONNECT_AUDIO), any());
@@ -625,16 +613,15 @@ public class HeadsetServiceTest {
             when(mStateMachines.get(mCurrentDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTED);
             // Disconnect audio
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.disconnectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(HeadsetStateMachine.DISCONNECT_AUDIO, mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_DISCONNECTED);
             // Further disconnection requests will fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED,
-                    mHeadsetService.disconnectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED);
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(
                             eq(HeadsetStateMachine.DISCONNECT_AUDIO), any(BluetoothDevice.class));
@@ -654,7 +641,7 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -682,9 +669,8 @@ public class HeadsetServiceTest {
                     mCurrentDevice,
                     BluetoothProfile.STATE_DISCONNECTED,
                     BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
@@ -696,42 +682,38 @@ public class HeadsetServiceTest {
                     mCurrentDevice,
                     BluetoothProfile.STATE_CONNECTING,
                     BluetoothProfile.STATE_CONNECTED);
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
         }
         if (MAX_HEADSET_CONNECTIONS >= 2) {
             // Try to connect audio
             BluetoothDevice firstDevice = connectedDevices.get(0);
             BluetoothDevice secondDevice = connectedDevices.get(1);
             // Set the first device as the active device
-            Assert.assertTrue(mHeadsetService.setActiveDevice(firstDevice));
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(firstDevice));
+            assertThat(mHeadsetService.setActiveDevice(firstDevice)).isTrue();
+            assertThat(mHeadsetService.connectAudio(firstDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             verify(mStateMachines.get(firstDevice))
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, firstDevice);
             // Put device to audio connecting state
             when(mStateMachines.get(firstDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTING);
             // 2nd connection attempt will succeed for the same device
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(firstDevice));
+            assertThat(mHeadsetService.connectAudio(firstDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             // Connect to 2nd device will fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                    mHeadsetService.connectAudio(secondDevice));
+            assertThat(mHeadsetService.connectAudio(secondDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
             verify(mStateMachines.get(secondDevice), never())
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, secondDevice);
             // Put device to audio connected state
             when(mStateMachines.get(firstDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTED);
             // Connect to 2nd device will fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                    mHeadsetService.connectAudio(secondDevice));
+            assertThat(mHeadsetService.connectAudio(secondDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
             verify(mStateMachines.get(secondDevice), never())
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, secondDevice);
         }
@@ -757,7 +739,7 @@ public class HeadsetServiceTest {
                 .getBondedDevices();
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -787,9 +769,8 @@ public class HeadsetServiceTest {
                     mCurrentDevice,
                     BluetoothProfile.STATE_DISCONNECTED,
                     BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
@@ -797,12 +778,10 @@ public class HeadsetServiceTest {
                     .thenReturn(BluetoothProfile.STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
                     mCurrentDevice,
                     BluetoothProfile.STATE_CONNECTING,
@@ -810,8 +789,8 @@ public class HeadsetServiceTest {
         }
         // Try to connect audio
         BluetoothDevice firstDevice = connectedDevices.get(0);
-        Assert.assertTrue(mHeadsetService.setActiveDevice(firstDevice));
-        Assert.assertEquals(BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio());
+        assertThat(mHeadsetService.setActiveDevice(firstDevice)).isTrue();
+        assertThat(mHeadsetService.connectAudio()).isEqualTo(BluetoothStatusCodes.SUCCESS);
         verify(mStateMachines.get(firstDevice))
                 .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, firstDevice);
     }
@@ -823,9 +802,8 @@ public class HeadsetServiceTest {
     @Test
     public void testConnectAudio_deviceNeverConnected() {
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertEquals(
-                BluetoothStatusCodes.ERROR_PROFILE_NOT_CONNECTED,
-                mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.ERROR_PROFILE_NOT_CONNECTED);
     }
 
     /**
@@ -838,7 +816,7 @@ public class HeadsetServiceTest {
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -853,18 +831,16 @@ public class HeadsetServiceTest {
         // Put device in disconnected state
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_DISCONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(Collections.EMPTY_LIST, mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEmpty();
         mHeadsetService.onConnectionStateChangedFromStateMachine(
                 mCurrentDevice,
                 BluetoothProfile.STATE_CONNECTED,
                 BluetoothProfile.STATE_DISCONNECTED);
         // connectAudio should fail
-        Assert.assertEquals(
-                BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
         verify(mStateMachines.get(mCurrentDevice), never())
                 .sendMessage(eq(HeadsetStateMachine.CONNECT_AUDIO), any());
     }
@@ -913,7 +889,7 @@ public class HeadsetServiceTest {
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
         final ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         // Connect one device
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -934,9 +910,8 @@ public class HeadsetServiceTest {
                 mCurrentDevice,
                 BluetoothProfile.STATE_DISCONNECTED,
                 BluetoothProfile.STATE_CONNECTING);
-        Assert.assertThat(
-                mHeadsetService.getConnectedDevices(),
-                Matchers.containsInAnyOrder(connectedDevices.toArray()));
+        assertThat(mHeadsetService.getConnectedDevices())
+                .containsExactlyElementsIn(connectedDevices);
         // Put device to connected
         connectedDevices.add(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
@@ -944,12 +919,10 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertThat(
-                mHeadsetService.getConnectedDevices(),
-                Matchers.containsInAnyOrder(connectedDevices.toArray()));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices())
+                .containsExactlyElementsIn(connectedDevices);
         mHeadsetService.onConnectionStateChangedFromStateMachine(
                 mCurrentDevice,
                 BluetoothProfile.STATE_CONNECTING,
@@ -977,7 +950,7 @@ public class HeadsetServiceTest {
                 mPhoneState, headsetCallState, ASYNC_CALL_TIMEOUT_MILLIS);
 
         // Set the device first as the active device
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
         // Change phone state
         headsetCallState.mCallState = HeadsetHalConstants.CALL_STATE_ALERTING;
         mHeadsetService.phoneStateChanged(
@@ -1016,7 +989,7 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -1046,9 +1019,8 @@ public class HeadsetServiceTest {
                     mCurrentDevice,
                     BluetoothProfile.STATE_DISCONNECTED,
                     BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
@@ -1056,17 +1028,15 @@ public class HeadsetServiceTest {
                     .thenReturn(BluetoothProfile.STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
                     mCurrentDevice,
                     BluetoothProfile.STATE_CONNECTING,
                     BluetoothProfile.STATE_CONNECTED);
-            Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
+            assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
         }
         // Change phone state
         mHeadsetService.phoneStateChanged(
@@ -1097,7 +1067,7 @@ public class HeadsetServiceTest {
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -1109,9 +1079,8 @@ public class HeadsetServiceTest {
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTED);
         mHeadsetService.clccResponse(1, 0, 0, 0, false, "8225319000", 0);
         // index 0 is the end mark of CLCC response.
         mHeadsetService.clccResponse(0, 0, 0, 0, false, "8225319000", 0);
@@ -1132,7 +1101,7 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         for (int i = 2; i >= 0; i--) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -1164,7 +1133,7 @@ public class HeadsetServiceTest {
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < 2; i++) {
             mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
                     .thenReturn(BluetoothProfile.STATE_CONNECTED);
@@ -1175,24 +1144,24 @@ public class HeadsetServiceTest {
         BluetoothDevice otherDevice = TestUtils.getTestDevice(mAdapter, 1);
 
         // Test whether active device been removed after enable silence mode.
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
-        Assert.assertTrue(mHeadsetService.setSilenceMode(mCurrentDevice, true));
-        Assert.assertNull(mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
+        assertThat(mHeadsetService.setSilenceMode(mCurrentDevice, true)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isNull();
 
         // Test whether active device been resumed after disable silence mode.
-        Assert.assertTrue(mHeadsetService.setSilenceMode(mCurrentDevice, false));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setSilenceMode(mCurrentDevice, false)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
 
         // Test that active device should not be changed when silence a non-active device
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
-        Assert.assertTrue(mHeadsetService.setSilenceMode(otherDevice, true));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
+        assertThat(mHeadsetService.setSilenceMode(otherDevice, true)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
 
         // Test that active device should not be changed when another device exits silence mode
-        Assert.assertTrue(mHeadsetService.setSilenceMode(otherDevice, false));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setSilenceMode(otherDevice, false)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
     }
 
     /** Test that whether active device been removed after enable silence mode */
@@ -1204,18 +1173,18 @@ public class HeadsetServiceTest {
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
         mHeadsetService.setForceScoAudio(false);
 
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
 
-        Assert.assertTrue(mHeadsetService.setActiveDevice(null));
+        assertThat(mHeadsetService.setActiveDevice(null)).isTrue();
         when(mSystemInterface.isInCall()).thenReturn(true);
         mHeadsetService.setAudioRouteAllowed(false);
 
         // Test that active device should not be changed if audio is not allowed
-        Assert.assertFalse(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(null, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isFalse();
+        assertThat(mHeadsetService.getActiveDevice()).isNull();
     }
 
     @Test
@@ -1233,19 +1202,17 @@ public class HeadsetServiceTest {
                 .thenReturn(null);
 
         // No connected device
-        Assert.assertTrue(mHeadsetService.getFallbackCandidates(mDatabaseManager).isEmpty());
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager)).isEmpty();
 
         // One connected device
         addConnectedDeviceHelper(deviceA);
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceA));
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceA);
 
         // Two connected devices
         addConnectedDeviceHelper(deviceB);
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceA));
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceB));
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceA, deviceB);
     }
 
     @Test
@@ -1261,14 +1228,12 @@ public class HeadsetServiceTest {
 
         // Has a connected watch device
         addConnectedDeviceHelper(deviceWatch);
-        Assert.assertTrue(mHeadsetService.getFallbackCandidates(mDatabaseManager).isEmpty());
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager)).isEmpty();
 
         // Two connected devices with one watch
         addConnectedDeviceHelper(deviceRegular);
-        Assert.assertFalse(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceWatch));
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceRegular));
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceRegular);
     }
 
     @Test
@@ -1277,14 +1242,13 @@ public class HeadsetServiceTest {
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
         mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         mHeadsetService.onConnectionStateChangedFromStateMachine(
                 mCurrentDevice,
                 BluetoothProfile.STATE_DISCONNECTED,
@@ -1299,7 +1263,7 @@ public class HeadsetServiceTest {
                                         BluetoothSinkAudioPolicy.POLICY_ALLOWED)
                                 .setInBandRingtonePolicy(BluetoothSinkAudioPolicy.POLICY_ALLOWED)
                                 .build());
-        Assert.assertEquals(true, mHeadsetService.isInbandRingingEnabled());
+        assertThat(mHeadsetService.isInbandRingingEnabled()).isTrue();
 
         when(mStateMachines.get(mCurrentDevice).getHfpCallAudioPolicy())
                 .thenReturn(
@@ -1310,7 +1274,7 @@ public class HeadsetServiceTest {
                                 .setInBandRingtonePolicy(
                                         BluetoothSinkAudioPolicy.POLICY_NOT_ALLOWED)
                                 .build());
-        Assert.assertEquals(false, mHeadsetService.isInbandRingingEnabled());
+        assertThat(mHeadsetService.isInbandRingingEnabled()).isFalse();
     }
 
     private void addConnectedDeviceHelper(BluetoothDevice device) {
@@ -1318,17 +1282,17 @@ public class HeadsetServiceTest {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
                 .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        Assert.assertTrue(mHeadsetService.connect(device));
+        assertThat(mHeadsetService.connect(device)).isTrue();
         when(mStateMachines.get(device).getDevice()).thenReturn(device);
         when(mStateMachines.get(device).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTING);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTING, mHeadsetService.getConnectionState(device));
+        assertThat(mHeadsetService.getConnectionState(device))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTING);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
                 .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED, mHeadsetService.getConnectionState(device));
-        Assert.assertTrue(mHeadsetService.getConnectedDevices().contains(device));
+        assertThat(mHeadsetService.getConnectionState(device))
+                .isEqualTo(BluetoothProfile.STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).contains(device);
     }
 
     /*
@@ -1344,6 +1308,6 @@ public class HeadsetServiceTest {
         doReturn(bondState).when(mAdapterService).getBondState(device);
         when(mDatabaseManager.getProfileConnectionPolicy(device, BluetoothProfile.HEADSET))
                 .thenReturn(priority);
-        Assert.assertEquals(expected, mHeadsetService.okToAcceptConnection(device, false));
+        assertThat(mHeadsetService.okToAcceptConnection(device, false)).isEqualTo(expected);
     }
 }
